fix: fix modal still being visible

--- a/src/components/modal.module.css
+++ b/src/components/modal.module.css
@@ -38,6 +38,10 @@
     position: sticky;
     top: 2px;
   }
+  .modalHidden {
+    transform: translateX(100%);
+    display: none;
+  }
   /* .modalAlert {
     margin-left: 10rem;
   } */
